--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Build custom rocks for sunbeam from ppas"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "pydantic>=2.12.5",
+    "msgspec>=0.20.0",
     "pyyaml>=6.0.3",
     "rich>=14.3.1",
     "typer>=0.21.1",
