--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "msgspec>=0.20.0",
-    "pyyaml>=6.0.3",
     "rich>=14.3.1",
+    "ruamel-yaml>=0.19.1",
     "typer>=0.21.1",
     "xdg-base-dirs>=6.0.2",
 ]
