--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "msgspec>=0.20.0",
+    "python-debian>=1.0.1",
     "requests>=2.32.5",
     "rich>=14.3.1",
     "ruamel-yaml>=0.19.1",
