--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,9 @@ dev = [
     "ruff>=0.14.14",
     "ty>=0.0.14",
 ]
+
+[tool.ruff]
+line-length = 79
+
+[tool.ruff.lint]
+select = ["E4", "E5", "E7", "E9", "F", "UP"]
